updates.  moved the Frame stuff out of build_frames into a frame module.

--- a/primary/text-process/2011_jul_rm.cfg
+++ b/primary/text-process/2011_jul_rm.cfg
@@ -9,22 +9,22 @@ build_images = True
 build_csv_files = False
 
 [run100]
-output_folder = jul_100
+output_folder = 2011_jul_100
 request_value = 100
 
 [run150]
-output_folder = jul_150
+output_folder = 2011_jul_150
 request_value = 150
 
 [run200]
-output_folder = jul_200
+output_folder = 2011_jul_200
 request_value = 200
 
 [run250]
-output_folder = jul_250
+output_folder = 2011_jul_250
 request_value = 250
 
 [run300]
-output_folder = jul_300
+output_folder = 2011_jul_300
 request_value = 300
 
