--- a/primary/text-process/2011_jul_rm.cfg
+++ b/primary/text-process/2011_jul_rm.cfg
@@ -10,30 +10,14 @@
 database_file = /Users/pstrink/dissert/tweets/tweets.db
 # root_dir is currently unused.
 root_dir = /Users/pstrink/dissert/tweets/
-year = 2011
-month = Jul
+#2007_Feb
+year = 2007
+month = Feb
 stopwords = ../stopwords.txt
 remove_singletons = True
 build_images = True
 build_csv_files = False
 
 [run100]
-output_folder = 2011_jul_100
+output_folder = 2007_feb_100
 request_value = 100
-
-[run150]
-output_folder = 2011_jul_150
-request_value = 150
-
-[run200]
-output_folder = 2011_jul_200
-request_value = 200
-
-[run250]
-output_folder = 2011_jul_250
-request_value = 250
-
-[run300]
-output_folder = 2011_jul_300
-request_value = 300
-
