accidentally checked in a diff here.

--- a/primary/text-process/2011_jul_rm.cfg
+++ b/primary/text-process/2011_jul_rm.cfg
@@ -10,14 +10,13 @@
 database_file = /Users/pstrink/dissert/tweets/tweets.db
 # root_dir is currently unused.
 root_dir = /Users/pstrink/dissert/tweets/
-#2007_Feb
-year = 2007
-month = Feb
+year = 2011
+month = Jul
 stopwords = ../stopwords.txt
 remove_singletons = True
 build_images = True
 build_csv_files = False
 
 [run100]
-output_folder = 2007_feb_100
+output_folder = 2011_jul_100
 request_value = 100
