--- a/primary/text-process/2011_jul_rm.cfg
+++ b/primary/text-process/2011_jul_rm.cfg
@@ -14,7 +14,8 @@ year = 2011
 month = Jul
 stopwords = ../stopwords.txt
 remove_singletons = True
-build_images = True
+build_rgb_images = True
+build_grey_images = False
 build_csv_files = False
 
 [run100]
