now it can build frames per day per month for complete users, or incomplete users.  the difference is that with only full users, you are guaranteed to have no zero columns.  i'm really wondering if i should use list comprehension everywhere -- i wrote up neato versions of the looping...

--- a/primary/text-process/2011_jun_rm.cfg
+++ b/primary/text-process/2011_jun_rm.cfg
@@ -17,6 +17,7 @@ remove_singletons = True
 build_rgb_images = True
 build_grey_images = False
 build_csv_files = False
+full_users = False
 
 [run100]
 output_folder = 2011_jun_100
