--- a/primary/text-process/2011_jul_rm.cfg
+++ b/primary/text-process/2011_jul_rm.cfg
@@ -16,7 +16,8 @@ stopwords = ../stopwords.txt
 remove_singletons = True
 build_rgb_images = True
 build_grey_images = False
-build_csv_files = False
+build_csv_files = True
+full_users = False
 
 [run100]
 output_folder = 2011_jul_100
