--- a/primary/text-process/2011_jul_rm.cfg
+++ b/primary/text-process/2011_jul_rm.cfg
@@ -15,9 +15,9 @@ month = Jul
 stopwords = ../stopwords.txt
 remove_singletons = True
 build_rgb_images = True
-build_grey_images = False
+build_grey_images = True
 build_csv_files = True
-full_users = False
+full_users = True
 
 [run100]
 output_folder = 2011_jul_100
